feat: Agregando los cambios hecho por Cristian A
Hare el pull request ya que hubieron archivos criticos en la branch de cristian donde seran los archivos agregandos y configuraciones para guardar datos y auntenticacion de correos con firebase.

--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/index.html
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/index.html
@@ -21,8 +21,22 @@
       </div>
       <button type="submit">Ingresar</button>
     </form>
+
+    <!-- 🔹 Aquí añadimos el botón para ir a registro -->
+    <button id="goRegister">
+      ¿No tienes cuenta? Regístrate
+    </button>
+
     <p id="message"></p>
   </div>
+
+  <script>
+    // Redirección al registro
+    document.getElementById("goRegister").addEventListener("click", function () {
+      window.location.href = "register.html";
+    });
+  </script>
+
   <script src="app.js"></script>
 </body>
 </html>
