feat: Modificando el register.js

--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/index.html
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/index.html
@@ -162,6 +162,12 @@
       <div class="row">
         <button id="loginBtn" type="submit">Ingresar</button>
       </div>
+      <!-- 🔹 Nuevo botón de registro -->
+      <div class="row">
+        <button type="button" onclick="window.location.href='register.html'">
+          ¿Aún no tienes cuenta? Regístrate
+        </button>
+      </div>
 
       <div id="errorBox" class="error"></div>
 
