--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/register.html
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/register.html
@@ -1,144 +1,188 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registro - Agencia Viajes</title>
-  <link rel="icon" href="avh.png" type="image/png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registro — Agencia de Viajes</title>
+  <link rel="icon" href="avh.png" type="image/png" />
   <style>
-    /* ====== styles.css integrado ====== */
+    :root {
+      --bg: #0f172a;
+      --card: #111827;
+      --muted: #94a3b8;
+      --text: #e5e7eb;
+      --accent: #22c55e;
+      --accent-2: #0ea5e9;
+    }
+
+    * {
+      box-sizing: border-box
+    }
+
     body {
       margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-image: url('avh2.png'); /* Cambia por tu imagen */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Inter,Arial,sans-serif;
+      color: var(--text);
+      min-height: 100dvh;
+      display: grid;
+      place-items: center;
+      background: radial-gradient(1200px 800px at 75% -10%,#0ea5e920,transparent), url('avh2.png') center/cover fixed no-repeat, var(--bg);
     }
 
-    .login-container {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
-      color: white;
-      width: 300px;
-      text-align: center;
-    }
-
-    .login-container h1 {
-      margin-bottom: 20px;
-    }
-
-    .form-group {
-      margin-bottom: 15px;
-      text-align: left;
-    }
-
-    .form-group label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    .form-group input {
+    .card {
       width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
+      max-width: 460px;
+      background: linear-gradient(180deg,#111827 0 60%,#0b1220 100%);
+      border: 1px solid #1f2937;
+      border-radius: 18px;
+      padding: 28px 24px;
+      box-shadow: 0 20px 60px #0007;
+      backdrop-filter: saturate(130%) blur(2px)
     }
+
+    h1 {
+      margin: 0 0 8px;
+      font-weight: 700;
+      font-size: 1.6rem
+    }
+
+    p.sub {
+      margin: 0 0 18px;
+      color: var(--muted);
+      font-size: .95rem
+    }
+
+    .form-grid {
+      display: grid;
+      gap: 12px
+    }
+
+    label {
+      display: block;
+      margin: 0 0 6px;
+      color: #cbd5e1;
+      font-size: .9rem
+    }
+
+    input {
+      width: 100%;
+      padding: 12px 14px;
+      border-radius: 12px;
+      border: 1px solid #334155;
+      background: #0b1220;
+      color: #e2e8f0;
+      outline: none
+    }
+
+      input:focus {
+        border-color: var(--accent-2);
+        box-shadow: 0 0 0 3px #0ea5e933
+      }
+
+    .row {
+      display: flex;
+      gap: 10px;
+      align-items: center
+    }
+
+      .row small {
+        color: #94a3b8
+      }
 
     button {
       width: 100%;
-      padding: 10px;
+      margin-top: 8px;
+      padding: 12px 14px;
       border: none;
-      border-radius: 5px;
-      background-color: #FFD700;
-      color: black;
-      font-weight: bold;
-      cursor: pointer;
+      border-radius: 12px;
+      background: linear-gradient(90deg,var(--accent),#16a34a);
+      color: #04260f;
+      font-weight: 700;
+      font-size: 1rem;
+      cursor: pointer
     }
 
-    button:hover {
-      background-color: brown;
-      color: white;
-    }
+      button:disabled {
+        opacity: .5;
+        cursor: not-allowed
+      }
 
-    #message {
+    .error {
+      display: none;
       margin-top: 10px;
-      color: #ff6666;
+      padding: 10px;
+      border-radius: 10px;
+      background: #7f1d1d;
+      color: #fecaca;
+      border: 1px solid #dc2626
     }
+
+    .ok {
+      display: none;
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 10px;
+      background: #052e18;
+      color: #bbf7d0;
+      border: 1px solid #16a34a
+    }
+
+    .footer {
+      margin-top: 18px;
+      color: #94a3b8;
+      font-size: .82rem;
+      text-align: center
+    }
+
+      .footer a {
+        color: #93c5fd;
+        text-decoration: none
+      }
+
+        .footer a:hover {
+          text-decoration: underline
+        }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h1>Registrarse</h1>
-    <form id="registerForm">
-      <div class="form-group">
-        <label for="username">Usuario</label>
-        <input type="text" id="username" placeholder="Crea tu usuario" required>
+  <main class="card">
+    <h1>Crear cuenta</h1>
+    <p class="sub">Regístrese para usar la app y acceder al <strong>Swagger UI</strong>.</p>
+
+    <form id="registerForm" class="form-grid" autocomplete="on">
+      <div>
+        <label for="fullname">Nombre completo</label>
+        <input id="fullname" name="fullname" type="text" placeholder="Juan Pérez" required />
       </div>
-      <div class="form-group">
-        <label for="email">Correo electrónico</label>
-        <input type="email" id="email" placeholder="Ingresa tu correo" required>
+      <div>
+        <label for="email">Correo</label>
+        <input id="email" name="email" type="email" placeholder="correo@ejemplo.com" required />
       </div>
-      <div class="form-group">
+      <div>
         <label for="password">Contraseña</label>
-        <input type="password" id="password" placeholder="Crea tu contraseña" required>
+        <input id="password" name="password" type="password" placeholder="••••••••" required minlength="6" />
       </div>
-      <button type="submit">Registrarse</button>
+      <div>
+        <label for="confirm">Confirmar contraseña</label>
+        <input id="confirm" name="confirm" type="password" placeholder="••••••••" required minlength="6" />
+      </div>
+
+      <div class="row">
+        <input id="terms" type="checkbox" required />
+        <small>Acepto términos y condiciones.</small>
+      </div>
+
+      <button id="registerBtn" type="submit">Registrarme</button>
+
+      <div id="okBox" class="ok"></div>
+      <div id="errorBox" class="error"></div>
+
+      <div class="footer">
+        ¿Ya tienes cuenta? <a href="/index.html">Inicia sesión</a>
+      </div>
     </form>
-    <p id="message"></p>
-  </div>
+  </main>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
-    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-    import { firebaseConfig } from "./firebase-config.js";
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-
-    window.handleRegister = async function handleRegister(event) {
-      event?.preventDefault?.();
-      const name = document.getElementById('name')?.value?.trim();
-      const username = document.getElementById('username')?.value?.trim();
-      const email = document.getElementById('email')?.value?.trim();
-      const password = document.getElementById('password')?.value;
-      const message = document.getElementById('message');
-
-      try {
-        if (!username) throw new Error("Debes indicar un nombre de usuario.");
-
-        // Crea user en Auth
-        const cred = await createUserWithEmailAndPassword(auth, email, password);
-        const uid = cred.user.uid;
-
-        // Guarda perfil
-        await setDoc(doc(db, 'users', uid), { name, email, username });
-
-        // Índice username -> email, uid (para login por username)
-        await setDoc(doc(db, 'usernames', username), { email, uid });
-
-        if (message) {
-          message.style.color = 'lightgreen';
-          message.textContent = `✅ Usuario registrado: ${username}`;
-        }
-        setTimeout(() => (window.location.href = "/"), 800);
-      } catch (err) {
-        console.error(err);
-        if (message) {
-          message.style.color = 'red';
-          message.textContent = `❌ ${err.code || ''} ${err.message || err}`;
-        }
-      }
-    };
- </script>
+  <script type="module" src="./register.js"></script>
 </body>
 </html>
