--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/register.html
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/register.html
@@ -5,184 +5,127 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro — Agencia de Viajes</title>
   <link rel="icon" href="avh.png" type="image/png" />
+  <link rel="stylesheet" href="styles.css" />
   <style>
-    :root {
-      --bg: #0f172a;
-      --card: #111827;
-      --muted: #94a3b8;
-      --text: #e5e7eb;
-      --accent: #22c55e;
-      --accent-2: #0ea5e9;
-    }
-
-    * {
-      box-sizing: border-box
-    }
-
+    /* estilos mínimos por si no tienes CSS aún */
     body {
-      margin: 0;
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Inter,Arial,sans-serif;
-      color: var(--text);
-      min-height: 100dvh;
-      display: grid;
-      place-items: center;
-      background: radial-gradient(1200px 800px at 75% -10%,#0ea5e920,transparent), url('avh2.png') center/cover fixed no-repeat, var(--bg);
+      background-image: url('avh2.png');
+      background: #0f172a;
+      color: #e5e7eb;
+      font-family: system-ui,Segoe UI,Roboto,Arial
     }
 
-    .card {
-      width: 100%;
-      max-width: 460px;
-      background: linear-gradient(180deg,#111827 0 60%,#0b1220 100%);
-      border: 1px solid #1f2937;
-      border-radius: 18px;
-      padding: 28px 24px;
-      box-shadow: 0 20px 60px #0007;
-      backdrop-filter: saturate(130%) blur(2px)
+    .container {
+      max-width: 420px;
+      margin: 40px auto;
+      padding: 24px;
+      background: #111827;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.3)
     }
 
     h1 {
-      margin: 0 0 8px;
-      font-weight: 700;
-      font-size: 1.6rem
+      margin: 0 0 16px
     }
 
-    p.sub {
-      margin: 0 0 18px;
-      color: var(--muted);
-      font-size: .95rem
-    }
-
-    .form-grid {
-      display: grid;
-      gap: 12px
+    .field {
+      margin-bottom: 12px
     }
 
     label {
       display: block;
-      margin: 0 0 6px;
-      color: #cbd5e1;
-      font-size: .9rem
+      margin-bottom: 6px;
+      color: #94a3b8
     }
 
     input {
       width: 100%;
-      padding: 12px 14px;
-      border-radius: 12px;
-      border: 1px solid #334155;
+      padding: 12px;
+      border: 1px solid #1f2937;
       background: #0b1220;
-      color: #e2e8f0;
-      outline: none
+      color: #e5e7eb;
+      border-radius: 10px
     }
-
-      input:focus {
-        border-color: var(--accent-2);
-        box-shadow: 0 0 0 3px #0ea5e933
-      }
-
-    .row {
-      display: flex;
-      gap: 10px;
-      align-items: center
-    }
-
-      .row small {
-        color: #94a3b8
-      }
 
     button {
       width: 100%;
-      margin-top: 8px;
-      padding: 12px 14px;
-      border: none;
+      padding: 12px;
+      border: 0;
       border-radius: 12px;
-      background: linear-gradient(90deg,var(--accent),#16a34a);
-      color: #04260f;
+      background: #22c55e;
+      color: #0b1220;
       font-weight: 700;
-      font-size: 1rem;
       cursor: pointer
     }
 
-      button:disabled {
-        opacity: .5;
-        cursor: not-allowed
-      }
+    .muted {
+      color: #94a3b8;
+      font-size: .9rem;
+      margin-top: 10px
+    }
 
     .error {
-      display: none;
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 10px;
       background: #7f1d1d;
       color: #fecaca;
-      border: 1px solid #dc2626
+      padding: 10px;
+      border-radius: 10px;
+      display: none;
+      margin-bottom: 10px
     }
 
     .ok {
-      display: none;
-      margin-top: 10px;
+      background: #052e16;
+      color: #bbf7d0;
       padding: 10px;
       border-radius: 10px;
-      background: #052e18;
-      color: #bbf7d0;
-      border: 1px solid #16a34a
+      display: none;
+      margin-bottom: 10px
     }
-
-    .footer {
-      margin-top: 18px;
-      color: #94a3b8;
-      font-size: .82rem;
-      text-align: center
-    }
-
-      .footer a {
-        color: #93c5fd;
-        text-decoration: none
-      }
-
-        .footer a:hover {
-          text-decoration: underline
-        }
   </style>
 </head>
 <body>
-  <main class="card">
+  <div class="container">
     <h1>Crear cuenta</h1>
-    <p class="sub">Regístrese para usar la app y acceder al <strong>Swagger UI</strong>.</p>
 
-    <form id="registerForm" class="form-grid" autocomplete="on">
-      <div>
-        <label for="fullname">Nombre completo</label>
-        <input id="fullname" name="fullname" type="text" placeholder="Juan Pérez" required />
+    <div id="msgError" class="error"></div>
+    <div id="msgOk" class="ok"></div>
+
+    <form id="registerForm" autocomplete="on">
+      <div class="field">
+        <label for="nombre">Nombre completo</label>
+        <input id="nombre" name="nombre" type="text" placeholder="Ej: Boris Rybalov" required />
       </div>
-      <div>
-        <label for="email">Correo</label>
-        <input id="email" name="email" type="email" placeholder="correo@ejemplo.com" required />
+
+      <div class="field">
+        <label for="email">Correo electrónico</label>
+        <input id="email" name="email" type="email" placeholder="tucorreo@dominio.com" required />
       </div>
-      <div>
+
+      <div class="field">
+        <label for="telefono">Teléfono (opcional)</label>
+        <input id="telefono" name="telefono" type="tel" placeholder="+504 ..." />
+      </div>
+
+      <div class="field">
         <label for="password">Contraseña</label>
-        <input id="password" name="password" type="password" placeholder="••••••••" required minlength="6" />
-      </div>
-      <div>
-        <label for="confirm">Confirmar contraseña</label>
-        <input id="confirm" name="confirm" type="password" placeholder="••••••••" required minlength="6" />
+        <input id="password" name="password" type="password" placeholder="Mínimo 6 caracteres" required minlength="6" />
       </div>
 
-      <div class="row">
-        <input id="terms" type="checkbox" required />
-        <small>Acepto términos y condiciones.</small>
+      <div class="field">
+        <label for="password2">Confirmar contraseña</label>
+        <input id="password2" name="password2" type="password" required minlength="6" />
       </div>
 
-      <button id="registerBtn" type="submit">Registrarme</button>
-
-      <div id="okBox" class="ok"></div>
-      <div id="errorBox" class="error"></div>
-
-      <div class="footer">
-        ¿Ya tienes cuenta? <a href="/index.html">Inicia sesión</a>
-      </div>
+      <button type="submit">Registrarme</button>
     </form>
-  </main>
 
+    <p class="muted" style="text-align:center;margin-top:14px">
+      ¿Ya tienes cuenta?
+      <a href="index.html">Inicia sesión</a>
+    </p>
+  </div>
+
+  <!-- Tu lógica de registro -->
   <script type="module" src="./register.js"></script>
 </body>
 </html>
