feat: Agregando fondo al register.html

--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/register.html
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/register.html
@@ -9,10 +9,11 @@
   <style>
     /* estilos mínimos por si no tienes CSS aún */
     body {
-      background-image: url('avh2.png');
-      background: #0f172a;
+      background: radial-gradient(1200px 800px at 75% -10%, #0ea5e920, transparent), url('avh2.png') center/cover fixed no-repeat, #0f172a; /* color de respaldo */
       color: #e5e7eb;
-      font-family: system-ui,Segoe UI,Roboto,Arial
+      font-family: system-ui,Segoe UI,Roboto,Arial;
+      margin: 0;
+      min-height: 100vh;
     }
 
     .container {
