feat: Modifcaciones titulos login

--- a/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/index.html
+++ b/AgenciaViajesBackend_NET8_FULL/AgenciaViajes.API/wwwroot/index.html
@@ -173,8 +173,8 @@
       <div id="errorBox" class="error"></div>
 
       <div class="hint">
-        Usuario por defecto:
-        <div class="cred"><strong>usuario:</strong> admin &nbsp;&nbsp; <strong>contraseña:</strong> 123456</div>
+        Travel International HN
+        <div class="cred"><strong>Entra en nuestra web sites travel</strong> crea tu cuenta y pide tu viaje  &nbsp;&nbsp; <strong></strong> </div>
       </div>
 
       <div class="footer">
